--- a/unitmanagement/templates/unitmanagement/k9_mia_list.html
+++ b/unitmanagement/templates/unitmanagement/k9_mia_list.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="ui inverted segment" style="padding:20px;">
-    <h3 class="ui inverted header">Unconfirmed Arrival List
+    <h3 class="ui inverted header">MIA List
     <div class="sub header">List of Units that did not arrive on duty. Select a unit to confirm status.</div>
     </h3>
 
