--- a/profiles/templates/profiles/sidebar_um.html
+++ b/profiles/templates/profiles/sidebar_um.html
@@ -29,15 +29,12 @@
                             <a href="{% url 'unitmanagement:k9_incident_list'%}" class="item">
                                 <i class="clipboard list icon"></i>K9 Incident List
                             </a>
-                            <!--<a href="{% url 'unitmanagement:k9_checkup_pending'%}" class="item">-->
-                                <!--<i class="calendar icon"></i>Schedule K9 Checkups for Initial Deployment-->
-                            <!--</a>-->
                             <a href="{% url 'unitmanagement:due_retired_list'%}" class="item">
                                     <i class="clipboard list icon"></i>Due for
                                     Retirement List
                                 </a>
                             <a href="{% url 'unitmanagement:k9_mia_list'%}" class="item">
-                                    <i class="clipboard list icon"></i>Unconfirmed Arrivals
+                                    <i class="clipboard list icon"></i>MIA List
                                 </a>
                             <a href="{% url 'unitmanagement:emergency_leave_list'%}" class="item">
                                 <i class="clipboard list icon"></i>Emergency Leave List
